[package]
name = "tagger"
version = "0.1.0"
authors = ["Daniel Santana <danielgsantana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
colored = "1.9"
difference = "2.0"
git2 = "0.13"
Inflector = "0.11"
regex = "1.3"
serde = {version = "1.0", features=["derive"]}
structopt = "0.3"
toml = "0.5"

[dev-dependencies]
tempdir = "*"